qmlui: added VCFrame properties file

--- a/qmlui/qmlui.qrc
+++ b/qmlui/qmlui.qrc
@@ -106,6 +106,7 @@
     <file alias="VCWidgetItem.qml">qml/virtualconsole/VCWidgetItem.qml</file>
     <file alias="VCWidgetProperties.qml">qml/virtualconsole/VCWidgetProperties.qml</file>
     <file alias="VCFrameItem.qml">qml/virtualconsole/VCFrameItem.qml</file>
+    <file alias="VCFrameProperties.qml">qml/virtualconsole/VCFrameProperties.qml</file>
     <file alias="VCButtonItem.qml">qml/virtualconsole/VCButtonItem.qml</file>
     <file alias="VCButtonProperties.qml">qml/virtualconsole/VCButtonProperties.qml</file>
     <file alias="VCLabelItem.qml">qml/virtualconsole/VCLabelItem.qml</file>
