--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -67,6 +67,7 @@
     <file alias="keybinding.svg">keybinding.svg</file>
     <file alias="knob.svg">knob.svg</file>
     <file alias="label.svg">label.svg</file>
+    <file alias="laser.svg">laser.svg</file>
     <file alias="lock.svg">lock.svg</file>
     <file alias="loop.svg">loop.svg</file>
     <file alias="magenta.svg">magenta.svg</file>
@@ -87,8 +88,8 @@
     <file alias="resize.svg">resize.svg</file>
     <file alias="rgbmatrix.svg">rgbmatrix.svg</file>
     <file alias="rotate-right.svg">rotate-right.svg</file>
-    <!-- file alias="search.svg">search.svg</file -->
     <file alias="selectall.svg">selectall.svg</file>
+    <file alias="sequence.svg">sequence.svg</file>
     <file alias="scene.svg">scene.svg</file>
     <file alias="script.svg">script.svg</file>
     <file alias="showmanager.svg">showmanager.svg</file>
