--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -39,6 +39,7 @@
     <file alias="dmxdump.svg">dmxdump.svg</file>
     <file alias="dmxusbplugin.svg">dmxusbplugin.svg</file>
     <file alias="dmxview.svg">dmxview.svg</file>
+    <file alias="down.svg">down.svg</file>
     <file alias="e131plugin.svg">e131plugin.svg</file>
     <file alias="edit.svg">edit.svg</file>
     <file alias="editor.svg">editor.svg</file>
@@ -106,6 +107,7 @@
     <file alias="tilt.svg">tilt.svg</file>
     <file alias="uniview.svg">uniview.svg</file>
     <file alias="unlock.svg">unlock.svg</file>
+    <file alias="up.svg">up.svg</file>
     <file alias="uv.svg">uv.svg</file>
     <file alias="video.svg">video.svg</file>
     <file alias="virtualconsole.svg">virtualconsole.svg</file>
