--- a/ui/src/virtualconsole/vcsliderproperties.ui
+++ b/ui/src/virtualconsole/vcsliderproperties.ui
@@ -26,7 +26,7 @@
     <x>0</x>
     <y>0</y>
     <width>511</width>
-    <height>455</height>
+    <height>556</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -286,6 +286,12 @@
        </item>
        <item>
         <widget class="QTreeWidget" name="m_levelList">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="alternatingRowColors">
           <bool>true</bool>
          </property>
@@ -430,17 +436,7 @@
         </widget>
        </item>
        <item>
-        <spacer name="m_levelSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>0</height>
-          </size>
-         </property>
-        </spacer>
+        <layout class="QVBoxLayout" name="m_monitorResetControl"/>
        </item>
        <item>
         <widget class="QPushButton" name="m_switchToLevelModeButton">
