--- a/ui/src/qlcui.qrc
+++ b/ui/src/qlcui.qrc
@@ -1,7 +1,8 @@
-﻿<RCC>
-    <qresource>
+<RCC>
+    <qresource prefix="/">
         <file alias="add_dump.png">../../resources/icons/png/add_dump.png</file>
         <file alias="animation.png">../../resources/icons/png/animation.png</file>
+        <file alias="arrow_down_red.png">../../resources/icons/png/arrow_down_red.png</file>
         <file alias="attach.png">../../resources/icons/png/attach.png</file>
         <file alias="audio.png">../../resources/icons/png/audio.png</file>
         <file alias="audioinput.png">../../resources/icons/png/audioinput.png</file>
@@ -93,7 +94,7 @@
         <file alias="pan.png">../../resources/icons/png/pan.png</file>
         <file alias="panic.png">../../resources/icons/png/panic.png</file>
         <file alias="player_play.png">../../resources/icons/png/player_play.png</file>
-	<file alias="player_pause.png">../../resources/icons/png/player_pause.png</file>
+        <file alias="player_pause.png">../../resources/icons/png/player_pause.png</file>
         <file alias="player_stop.png">../../resources/icons/png/player_stop.png</file>
         <file alias="prism.png">../../resources/icons/png/prism.png</file>
         <file alias="qlcplus.png">../../resources/icons/png/qlcplus.png</file>
