ui/vcframe: another bunch of fixes for the properties dialog
Why creating a combo box at runtime when it could be there since the beginning with no effort ?
Also, the PR changed the default tab selected, which should be the first, not the second

--- a/ui/src/virtualconsole/vcframeproperties.ui
+++ b/ui/src/virtualconsole/vcframeproperties.ui
@@ -50,7 +50,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -192,6 +192,9 @@
                <enum>Qt::Horizontal</enum>
               </property>
              </widget>
+            </item>
+            <item>
+             <widget class="QComboBox" name="m_pageCombo"/>
             </item>
             <item>
              <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0">
