--- a/qmlui/qmlui.qrc
+++ b/qmlui/qmlui.qrc
@@ -34,6 +34,7 @@
     <file alias="MainView.qml">qml/MainView.qml</file>
     <file alias="MenuBarEntry.qml">qml/MenuBarEntry.qml</file>
     <file alias="QLCPlusFader.qml">qml/QLCPlusFader.qml</file>
+    <file alias="QLCPlusKnob.qml">qml/QLCPlusKnob.qml</file>
     <file alias="RobotoText.qml">qml/RobotoText.qml</file>
     <file alias="SectionBox.qml">qml/SectionBox.qml</file>
     <file alias="SidePanel.qml">qml/SidePanel.qml</file>
