--- a/ui/src/audioeditor.ui
+++ b/ui/src/audioeditor.ui
@@ -26,7 +26,7 @@
     <x>0</x>
     <y>0</y>
     <width>449</width>
-    <height>404</height>
+    <height>513</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -35,6 +35,32 @@
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout_2">
+     <item row="12" column="0" colspan="5">
+      <widget class="QGroupBox" name="groupBox">
+       <property name="title">
+        <string>Playback mode</string>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <widget class="QRadioButton" name="m_singleCheck">
+          <property name="text">
+           <string>Single shot</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="m_loopCheck">
+          <property name="text">
+           <string>Loop</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
      <item row="1" column="0" colspan="5">
       <widget class="Line" name="line">
        <property name="orientation">
@@ -95,14 +121,14 @@
        </property>
       </widget>
      </item>
-     <item row="12" column="0" colspan="3">
+     <item row="11" column="0" colspan="3">
       <widget class="QLabel" name="label_9">
        <property name="text">
         <string>Audio device</string>
        </property>
       </widget>
      </item>
-     <item row="10" column="1" colspan="2">
+     <item row="9" column="1" colspan="2">
       <widget class="QLabel" name="label_7">
        <property name="text">
         <string>Fade out</string>
@@ -131,7 +157,7 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="3" colspan="2">
+     <item row="8" column="3" colspan="2">
       <widget class="QLineEdit" name="m_fadeInEdit">
        <property name="text">
         <string notr="true">.00</string>
@@ -147,6 +173,9 @@
         <string>Name of the function being edited</string>
        </property>
       </widget>
+     </item>
+     <item row="11" column="3" colspan="2">
+      <widget class="QComboBox" name="m_audioDevCombo"/>
      </item>
      <item row="4" column="3" colspan="2">
       <widget class="QLabel" name="m_channelsLabel">
@@ -174,9 +203,6 @@
        </property>
       </widget>
      </item>
-     <item row="12" column="3" colspan="2">
-      <widget class="QComboBox" name="m_audioDevCombo"/>
-     </item>
      <item row="6" column="0" colspan="3">
       <widget class="QLabel" name="label_2">
        <property name="text">
@@ -184,7 +210,7 @@
        </property>
       </widget>
      </item>
-     <item row="10" column="3" colspan="2">
+     <item row="9" column="3" colspan="2">
       <widget class="QLineEdit" name="m_fadeOutEdit">
        <property name="text">
         <string notr="true">.00</string>
@@ -214,24 +240,23 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="0" colspan="3">
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>Sample rate</string>
+     <item row="8" column="0">
+      <widget class="QToolButton" name="m_speedDialButton">
+       <property name="toolTip">
+        <string>Show/Hide speed dial window</string>
        </property>
-      </widget>
-     </item>
-     <item row="3" column="0" colspan="3">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Duration</string>
+       <property name="icon">
+        <iconset resource="qlcui.qrc">
+         <normaloff>:/speed.png</normaloff>:/speed.png</iconset>
        </property>
-      </widget>
-     </item>
-     <item row="7" column="0" colspan="5">
-      <widget class="Line" name="line_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+       <property name="iconSize">
+        <size>
+         <width>26</width>
+         <height>26</height>
+        </size>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -255,57 +280,38 @@
        </property>
       </widget>
      </item>
-     <item row="9" column="0">
-      <widget class="QToolButton" name="m_speedDialButton">
-       <property name="toolTip">
-        <string>Show/Hide speed dial window</string>
-       </property>
-       <property name="icon">
-        <iconset resource="qlcui.qrc">
-         <normaloff>:/speed.png</normaloff>:/speed.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>26</width>
-         <height>26</height>
-        </size>
-       </property>
-       <property name="checkable">
-        <bool>true</bool>
+     <item row="7" column="0" colspan="5">
+      <widget class="Line" name="line_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
-     <item row="9" column="1" colspan="2">
-      <widget class="QLabel" name="label_6">
+     <item row="5" column="0" colspan="3">
+      <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>Fade in</string>
+        <string>Sample rate</string>
        </property>
       </widget>
      </item>
-     <item row="11" column="0" colspan="5">
+     <item row="3" column="0" colspan="3">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Duration</string>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="0" colspan="5">
       <widget class="Line" name="line_3">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
-     <item row="8" column="3">
-      <widget class="QCheckBox" name="m_loopedCheckBox">
-       <property name="toolTip">
-        <string>Loop audio until explicitly stopped</string>
-       </property>
+     <item row="8" column="1" colspan="2">
+      <widget class="QLabel" name="label_6">
        <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="0" colspan="3">
-      <widget class="QLabel" name="label_10">
-       <property name="text">
-        <string>Loop</string>
-       </property>
-       <property name="buddy">
-        <cstring>m_loopedCheckBox</cstring>
+        <string>Fade in</string>
        </property>
       </widget>
      </item>
@@ -316,7 +322,6 @@
  <tabstops>
   <tabstop>m_nameEdit</tabstop>
   <tabstop>m_fileButton</tabstop>
-  <tabstop>m_loopedCheckBox</tabstop>
   <tabstop>m_fadeInEdit</tabstop>
   <tabstop>m_fadeOutEdit</tabstop>
   <tabstop>m_audioDevCombo</tabstop>
