qmlui: more work on video playback

--- a/qmlui/qmlui.qrc
+++ b/qmlui/qmlui.qrc
@@ -86,6 +86,7 @@
     <file alias="EditorTopBar.qml">qml/fixturesfunctions/EditorTopBar.qml</file>
     <file alias="AudioEditor.qml">qml/fixturesfunctions/AudioEditor.qml</file>
     <file alias="VideoEditor.qml">qml/fixturesfunctions/VideoEditor.qml</file>
+    <file alias="VideoContext.qml">qml/fixturesfunctions/VideoContext.qml</file>
     <file alias="CollectionEditor.qml">qml/fixturesfunctions/CollectionEditor.qml</file>
     <file alias="CollectionFunctionDelegate.qml">qml/fixturesfunctions/CollectionFunctionDelegate.qml</file>
     <file alias="SceneEditor.qml">qml/fixturesfunctions/SceneEditor.qml</file>
