--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -59,6 +59,7 @@
     <file alias="frame.svg">frame.svg</file>
     <file alias="fullscreen.svg">fullscreen.svg</file>
     <file alias="functions.svg">functions.svg</file>
+    <file alias="global.svg">global.svg</file>
     <file alias="gobo.svg">gobo.svg</file>
     <file alias="green.svg">green.svg</file>
     <file alias="group.svg">group.svg</file>
