qmlui: introducing a custom popup item based on quick controls 2 Dialog
This is going to replace all the existing popups and possibly the whole ActionManager too

--- a/qmlui/qmlui.qrc
+++ b/qmlui/qmlui.qrc
@@ -51,6 +51,7 @@
     <file alias="PopupPINSetup.qml">qml/PopupPINSetup.qml</file>
     <file alias="PopupTextRequest.qml">qml/PopupTextRequest.qml</file>
     <file alias="PopupBox.qml">qml/PopupBox.qml</file>
+    <file alias="CustomPopupDialog.qml">qml/CustomPopupDialog.qml</file>
 
     <!-- Fixtures and Functions -->
     <file alias="FixturesAndFunctions.qml">qml/fixturesfunctions/FixturesAndFunctions.qml</file>
