--- a/qmlui/qmlui.qrc
+++ b/qmlui/qmlui.qrc
@@ -49,7 +49,7 @@
     <!-- Popup system -->
     <file alias="PopupPINRequest.qml">qml/PopupPINRequest.qml</file>
     <file alias="PopupPINSetup.qml">qml/PopupPINSetup.qml</file>
-    <file alias="PopupTextRequest.qml">qml/PopupTextRequest.qml</file>
+    <file alias="PopupRenameFunctions.qml">qml/PopupRenameFunctions.qml</file>
     <file alias="PopupBox.qml">qml/PopupBox.qml</file>
     <file alias="CustomPopupDialog.qml">qml/CustomPopupDialog.qml</file>
 
