--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -36,6 +36,7 @@
     <file alias="cuelist.svg">cuelist.svg</file>
     <file alias="cyan.svg">cyan.svg</file>
     <file alias="dimmer.svg">dimmer.svg</file>
+    <file alias="diptool.svg">diptool.svg</file>
     <file alias="dmxdump.svg">dmxdump.svg</file>
     <file alias="dmxusbplugin.svg">dmxusbplugin.svg</file>
     <file alias="dmxview.svg">dmxview.svg</file>
