qmlui: implemented universe info printing

--- a/qmlui/qmlui.qrc
+++ b/qmlui/qmlui.qrc
@@ -75,6 +75,7 @@
     <file alias="FixtureNodeDelegate.qml">qml/fixturesfunctions/FixtureNodeDelegate.qml</file>
     <file alias="GridEditor.qml">qml/fixturesfunctions/GridEditor.qml</file>
     <file alias="UniverseGridView.qml">qml/fixturesfunctions/UniverseGridView.qml</file>
+    <file alias="UniverseSummary.qml">qml/fixturesfunctions/UniverseSummary.qml</file>
     <file alias="DMXView.qml">qml/fixturesfunctions/DMXView.qml</file>
     <file alias="FixtureDMXItem.qml">qml/fixturesfunctions/FixtureDMXItem.qml</file>
     <file alias="2DView.qml">qml/fixturesfunctions/2DView.qml</file>
