--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -85,6 +85,7 @@
     <file alias="pingpong.svg">pingpong.svg</file>
     <file alias="play.svg">play.svg</file>
     <file alias="position.svg">position.svg</file>
+    <file alias="printer.svg">printer.svg</file>
     <file alias="prism.svg">prism.svg</file>
     <file alias="qlcplus.svg">qlcplus.svg</file>
     <file alias="random.svg">random.svg</file>
