ui/vcspeeddial: refine PR #978 without focus trick
Basically when selecting the paste items, the current editing is automatically accepted.
Therefore we just need to save the reference of the source item and use its data in the paste slot.

--- a/ui/src/virtualconsole/vcspeeddialproperties.ui
+++ b/ui/src/virtualconsole/vcspeeddialproperties.ui
@@ -570,7 +570,7 @@
    <sender>m_copyFactorsButton</sender>
    <signal>clicked()</signal>
    <receiver>VCSpeedDialProperties</receiver>
-   <slot>copySelectedFactorsClicked()</slot>
+   <slot>slotCopyFactorsClicked()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>376</x>
@@ -586,7 +586,7 @@
    <sender>m_pasteFactorsButton</sender>
    <signal>clicked()</signal>
    <receiver>VCSpeedDialProperties</receiver>
-   <slot>pasteFactorsToSelectedClicked()</slot>
+   <slot>slotPasteFactorsClicked()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>376</x>
