--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -82,6 +82,7 @@
     <file alias="oscplugin.svg">oscplugin.svg</file>
     <file alias="other.svg">other.svg</file>
     <file alias="pan.svg">pan.svg</file>
+    <file alias="pause.svg">pause.svg</file>
     <file alias="pingpong.svg">pingpong.svg</file>
     <file alias="play.svg">play.svg</file>
     <file alias="position.svg">position.svg</file>
