--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -42,6 +42,7 @@
     <file alias="dmxview.svg">dmxview.svg</file>
     <file alias="down.svg">down.svg</file>
     <file alias="e131plugin.svg">e131plugin.svg</file>
+    <file alias="edit-paste.svg">edit-paste.svg</file>
     <file alias="edit.svg">edit.svg</file>
     <file alias="editor.svg">editor.svg</file>
     <file alias="effect.svg">effect.svg</file>
