--- a/qmlui/qmlui.qrc
+++ b/qmlui/qmlui.qrc
@@ -111,6 +111,10 @@
     <file alias="SceneEntity.qml">qml/fixturesfunctions/3DView/SceneEntity.qml</file>
     <file alias="ScreenQuadEntity.qml">qml/fixturesfunctions/3DView/ScreenQuadEntity.qml</file>
     <file alias="SelectionGeometry.qml">qml/fixturesfunctions/3DView/SelectionGeometry.qml</file>
+    <file alias="StageSimple.qml">qml/fixturesfunctions/3DView/StageSimple.qml</file>
+    <file alias="StageBox.qml">qml/fixturesfunctions/3DView/StageBox.qml</file>
+    <file alias="StageRock.qml">qml/fixturesfunctions/3DView/StageRock.qml</file>
+    
     <file alias="SettingsView3D.qml">qml/fixturesfunctions/3DView/SettingsView3D.qml</file>
     
     <file alias="debug_es2.frag">qml/fixturesfunctions/3DView/shaders/debug_es2.frag</file>
