--- a/qmlui/qmlui.qrc
+++ b/qmlui/qmlui.qrc
@@ -51,6 +51,9 @@
     <file alias="PopupPINRequest.qml">qml/PopupPINRequest.qml</file>
     <file alias="PopupPINSetup.qml">qml/PopupPINSetup.qml</file>
     <file alias="PopupRenameFunctions.qml">qml/PopupRenameFunctions.qml</file>
+    <file alias="PopupNetworkClient.qml">qml/PopupNetworkClient.qml</file>
+    <file alias="PopupNetworkConnect.qml">qml/PopupNetworkConnect.qml</file>
+    <file alias="PopupNetworkServer.qml">qml/PopupNetworkServer.qml</file>
     <file alias="CustomPopupDialog.qml">qml/CustomPopupDialog.qml</file>
 
     <!-- Fixtures and Functions -->
