qmlui: handle more network meta types
Started to forward Tardis actions to network
Added undo command to actions menu

--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -117,6 +117,7 @@
     <file alias="stopall.svg">stopall.svg</file>
     <file alias="stretch.svg">stretch.svg</file>
     <file alias="tilt.svg">tilt.svg</file>
+    <file alias="undo.svg">undo.svg</file>
     <file alias="uniview.svg">uniview.svg</file>
     <file alias="unlock.svg">unlock.svg</file>
     <file alias="up.svg">up.svg</file>
