qmlui: reworked history logic to support redo

--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -95,6 +95,7 @@
     <file alias="qlcplus.svg">qlcplus.svg</file>
     <file alias="random.svg">random.svg</file>
     <file alias="red.svg">red.svg</file>
+    <file alias="redo.svg">redo.svg</file>
     <file alias="remove.svg">remove.svg</file>
     <file alias="rename.svg">rename.svg</file>
     <file alias="reset.svg">reset.svg</file>
